tests/negative/test_cn_asgn_cn_arr.orb
fnc main() {
    i32[4] cn arr{0, 1, 2, 3};
    arr[0] = 100;
}